--- a/setup.cfg
+++ b/setup.cfg
@@ -35,7 +35,7 @@ project_urls =
 [options]
 packages = find:
 install_requires =
-    numpy<2
+    numpy>2
     opt-einsum
     psutil
     qcelemental
